tests/fixtures/tracebacks/syntax_error.txt
  File "src/bad.py", line 3
    def foo(:
            ^
SyntaxError: invalid syntax
